@@ -102,8 +102,12 @@ void V3LinkLevel::timescaling(const ModVec& mods) {
 
     for (AstNodeModule* nodep : mods) {
         if (nodep->timeunit().isNone()) {
-            if (modTimedp && !VN_IS(nodep, Iface) && !VN_IS(nodep, Primitive)
-                && !(VN_IS(nodep, Package) && VN_CAST(nodep, Package)->isDollarUnit())) {
+            if (modTimedp  // Got previous
+                && (  // unit doesn't already include an override
+                    v3Global.opt.timeOverrideUnit().isNone()
+                    && v3Global.opt.timeDefaultUnit().isNone())
+                && (!VN_IS(nodep, Iface) && !VN_IS(nodep, Primitive)
+                    && !(VN_IS(nodep, Package) && VN_CAST(nodep, Package)->isDollarUnit()))) {
                 nodep->v3warn(TIMESCALEMOD,
                               "Timescale missing on this module as other modules have "
                               "it (IEEE 1800-2017 3.14.2.3)\n"
